v9.0.4
- add support for tv show actors
- add videoresolution flag
- small skin layout changes

v9.0.3
- fix listing of pvr results

v9.0.2
- cosmetics

v9.0.1
- bump

v9.0.0
- changes for python 3

v8.0.12
- fix sorting of album songs and season episodes

v8.0.11
- leia bump

v8.0.10
- implement play/resume option

v8.0.9
- improve support for compilation albums

v8.0.8
- fix fanart for seasons and episodes

v8.0.7
- language

v8.0.6
- move repo to gitlab

v8.0.5
- favourites fix

v8.0.4
- add to favourites context menu item
- case insensitive search for actors and directors

v9.0.0
- changes for python 3

v8.0.3
- reset menu on init

v8.0.2
- fix content selection when using a horizontal menu
- fixed incorrect listitem.title for episodes
- show result counts in the menu
- fix content selection when using a horizontal menu

v8.0.1
- fix passing search categories to the script
- save the selected viewmode
- close globalsearch if no is selected when promted for a new search

v8.0.0
- rewrite for Kodi Leia

v7.3.1
- remove test settings

v7.3.0
- fix epg section
- removed channelnumber infolabel for epg items
- removed path infolabel for epg items

v7.2.4
- add originaltitle support

v7.2.3
- cosmetics radiobuttons
- don't show empty contextmenu

v7.2.2
- cleanup

v7.2.1
- skin cosmetics

v7.2.0
- use context menu from kodi

v7.1.0
- add direcor search support

v7.0.5
- code refactor
- add missing skin support for livetv
- fix infodialog buttons

v7.0.4
- ask user to search again when no results are found

v7.0.3
- new skin
- remove ok button in info dialog

v7.0.2
- return empty userrating instead of 0

v7.0.1
- remove starrating
- add support for userrating
- epg runtime is an int now

v7.0.0
- remove simplejson support

v6.0.2
- language update
- cosmetics

v6.0.1
- update action id's for jarvis

v5.0.0
- language update

v4.0.3
- fix README

v4.0.2
- rating fixes

v4.0.1
- fix channel id

v4.0.0
- add support for epg search
- fix fanart in infodialog

v3.0.4