@@ -51,7 +51,7 @@ CATEGORIES = {
                         'method':'VideoLibrary.GetMovies',
                         'properties':MOVIELABELS,
                         'sort':'title',
-                        'rule':'"filter":{"field":"title", "operator":"contains", "value":"%s"}',
+                        'rule':'"filter":{{"or":[{{"field":"title", "operator":"contains", "value":"{query}"}}, {{"field":"originaltitle", "operator":"contains", "value":"{query}"}}]}}',
                         'streamdetails':True,
                         'label':342,
                         'icon':'DefaultVideo.png',
@@ -66,7 +66,7 @@ CATEGORIES = {
                          'method':'VideoLibrary.GetTVShows',
                          'properties':TVSHOWLABELS,
                          'sort':'label',
-                         'rule':'"filter":{"field":"title", "operator":"contains", "value":"%s"}',
+                         'rule':'"filter":{{"field":"title", "operator":"contains", "value":"{query}"}}',
                          'streamdetails':False,
                          'label':20343,
                          'icon':'DefaultVideo.png',
@@ -81,7 +81,7 @@ CATEGORIES = {
                           'method':'VideoLibrary.GetEpisodes',
                           'properties':EPISODELABELS,
                           'sort':'title',
-                          'rule':'"filter":{"field":"title", "operator":"contains", "value":"%s"}',
+                          'rule':'"filter":{{"field":"title", "operator":"contains", "value":"{query}"}}',
                           'streamdetails':True,
                           'label':20360,
                           'icon':'DefaultVideo.png',
@@ -96,7 +96,7 @@ CATEGORIES = {
                              'method':'VideoLibrary.GetMusicVideos',
                              'properties':MUSICVIDEOLABELS,
                              'sort':'label',
-                             'rule':'"filter":{"field":"title", "operator":"contains", "value":"%s"}',
+                             'rule':'"filter":{{"field":"title", "operator":"contains", "value":"{query}"}}',
                              'streamdetails':True,
                              'label':20389,
                              'icon':'DefaultVideo.png',
@@ -111,7 +111,7 @@ CATEGORIES = {
                          'method':'AudioLibrary.GetArtists',
                          'properties':ARTISTLABELS,
                          'sort':'label',
-                         'rule':'"filter":{"field": "artist", "operator": "contains", "value": "%s"}',
+                         'rule':'"filter":{{"field": "artist", "operator": "contains", "value": "{query}"}}',
                          'streamdetails':False,
                          'label':133,
                          'icon':'DefaultArtist.png',
@@ -126,7 +126,7 @@ CATEGORIES = {
                         'method':'AudioLibrary.GetAlbums',
                         'properties':ALBUMLABELS,
                         'sort':'label',
-                        'rule':'"filter":{"field": "album", "operator": "contains", "value": "%s"}',
+                        'rule':'"filter":{{"field": "album", "operator": "contains", "value": "{query}"}}',
                         'streamdetails':False,
                         'label':132,
                         'icon':'DefaultAlbumCover.png',
@@ -141,7 +141,7 @@ CATEGORIES = {
                        'method':'AudioLibrary.GetSongs',
                        'properties':SONGLABELS,
                        'sort':'title',
-                       'rule':'"filter":{"field": "title", "operator": "contains", "value": "%s"}',
+                       'rule':'"filter":{{"field": "title", "operator": "contains", "value": "{query}"}}',
                        'streamdetails':False,
                        'label':134,
                        'icon':'DefaultAudio.png',
@@ -164,7 +164,7 @@ CATEGORIES = {
                         'method':'VideoLibrary.GetMovies',
                         'properties':ACTORLABELS,
                         'sort':'title',
-                        'rule':'"filter":{"field":"actor", "operator":"contains", "value":"%s"}',
+                        'rule':'"filter":{{"field":"actor", "operator":"contains", "value":"{query}"}}',
                         'streamdetails':False,
                         'label':32221,
                         'icon':'DefaultActor.png',
@@ -179,7 +179,7 @@ CATEGORIES = {
                            'method':'VideoLibrary.GetMovies',
                            'properties':DIRECTORLABELS,
                            'sort':'title',
-                           'rule':'"filter":{"field":"director", "operator":"contains", "value":"%s"}',
+                           'rule':'"filter":{{"field":"director", "operator":"contains", "value":"{query}"}}',
                            'streamdetails':False,
                            'label':20348,
                            'icon':'DefaultDirector.png',
@@ -194,7 +194,7 @@ CATEGORIES = {
                           'method':'VideoLibrary.GetTVShows',
                           'properties':ACTORLABELS,
                           'sort':'title',
-                          'rule':'"filter":{"field":"actor", "operator":"contains", "value":"%s"}',
+                          'rule':'"filter":{{"field":"actor", "operator":"contains", "value":"{query}"}}',
                           'streamdetails':False,
                           'label':32222,
                           'icon':'DefaultActor.png',
@@ -209,7 +209,7 @@ CATEGORIES = {
                         'method':'VideoLibrary.GetMovies',
                         'properties':MOVIELABELS,
                         'sort':'title',
-                        'rule':'"filter":{"field":"actor", "operator":"contains", "value":"%s"}',
+                        'rule':'"filter":{{"field":"actor", "operator":"contains", "value":"{query}"}}',
                         'streamdetails':True,
                         'label':342,
                         'icon':'DefaultVideo.png',
@@ -224,7 +224,7 @@ CATEGORIES = {
                         'method':'VideoLibrary.GetMovies',
                         'properties':MOVIELABELS,
                         'sort':'title',
-                        'rule':'"filter":{"field":"director", "operator":"contains", "value":"%s"}',
+                        'rule':'"filter":{{"field":"director", "operator":"contains", "value":"{query}"}}',
                         'streamdetails':True,
                         'label':342,
                         'icon':'DefaultVideo.png',
@@ -239,7 +239,7 @@ CATEGORIES = {
                               'method':'VideoLibrary.GetTVShows',
                               'properties':TVSHOWLABELS,
                               'sort':'title',
-                              'rule':'"filter":{"field":"actor", "operator":"contains", "value":"%s"}',
+                              'rule':'"filter":{{"field":"actor", "operator":"contains", "value":"{query}"}}',
                               'streamdetails':False,
                               'label':20343,
                               'icon':'DefaultVideo.png',
@@ -254,7 +254,7 @@ CATEGORIES = {
                                'method':'VideoLibrary.GetSeasons',
                                'properties':SEASONLABELS,
                                'sort':'label',
-                               'rule':'"tvshowid":%s',
+                               'rule':'"tvshowid":{query}',
                                'streamdetails':False,
                                'label':20373,
                                'icon':'DefaultVideo.png',
@@ -269,7 +269,7 @@ CATEGORIES = {
                                 'method':'VideoLibrary.GetEpisodes',
                                 'properties':EPISODELABELS,
                                 'sort':'episode',
-                                'rule':'"tvshowid":%s, "season":%s',
+                                'rule':'"tvshowid":{query0}, "season":{query1}',
                                 'streamdetails':True,
                                 'label':20360,
                                 'icon':'DefaultVideo.png',
@@ -284,7 +284,7 @@ CATEGORIES = {
                               'method':'AudioLibrary.GetAlbums',
                               'properties':ALBUMLABELS,
                               'sort':'label',
-                              'rule':'"filter":{"artistid":%s}',
+                              'rule':'"filter":{{"artistid":{query}}}',
                               'streamdetails':False,
                               'label':132,
                               'icon':'DefaultAlbumCover.png',
@@ -299,7 +299,7 @@ CATEGORIES = {
                              'method':'AudioLibrary.GetSongs',
                              'properties':SONGLABELS,
                              'sort':'track',
-                             'rule':'"filter":{"albumid":%s}',
+                             'rule':'"filter":{{"albumid":{query}}}',
                              'streamdetails':False,
                              'label':134,
                              'icon':'DefaultAudio.png',
