@@ -1,4 +1,5 @@
 v9.0.4
+- add support for originaltitle search
 - add support for tv show actors
 - add videoresolution flag
 - small skin layout changes
